Pushing first app page

--- a/templates/base_public.html
+++ b/templates/base_public.html
@@ -47,7 +47,7 @@
       <span class="mx-2">•</span>
       <a class="hover:underline" href="{{ url_for('terms') }}">Terms of Service</a>
       <span class="mx-2">•</span>
-      <a class="hover:underline" href="{{ url_for('support') }}">Support</a>
+      <a class="hover:underline" href="{{ support_url }}">Support</a>
     </div>
   </footer>
 
